# HelpDesk

./: .gitignore  Cargo.toml  README.md
bd/: table_creation.sql  utils.sql
src/: main.rs
src/controllers/: admin_controllers.rs  auth_controller.rs  mod.rs  ticket_controller.rs  user_controller.rs
src/db/: connection.rs
src/models/: appstate.rs  category.rs  mod.rs  ticket.rs  user.rs
src/routes/: auth.rs  mod.rs  register.rs  ticket.rs
src/services/: auth_service.rs
src/static/js/: login.js  ticket.js
src/templates/: index.html  login.html  new_ticket.html  register.html  tickets.html
src/utils/: misc.rs
