[package]
name = "HelpDesk"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
md5 = "0.7.0"
serde = "1.0.219"
sqlx = {version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls", "macros"]}
tera = "1.20.0"
tokio = { version = "1.44.1", features = ["full", "rt-multi-thread"] }
tower-http = "0.6.2"
